# feer-mutator

./: .env.default  README.md  main.py  pyproject.toml
src/mutator/: __main__.py  cli.py  consts.py  entities.py  hubstaff.py  renders.py  storage.py  time.py
src/mutator/tpls/: index.html
