[project]
name = "mutator"
version = "0.1.0"
description = ""
authors = [
    {name = "Piotr Smialkowski", email = "p.smialkowski@gmail.com"},
]
dependencies = [
    "aiohttp>=3.9.1",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mutator = "mutator.cli:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

